tests/tc/neg/union01.js

/*@ foo0 :: ((number|boolean)) => number */
function foo0(x) {
  return x;
}

